--- a/style.css
+++ b/style.css
@@ -231,6 +231,7 @@ a:hover {
 }
 
 .benefits__container {
+    position: relative;
     border-radius: 46px;
     max-width: 1030px;
     padding-top: 55px;
@@ -238,6 +239,74 @@ a:hover {
     display: flex;
     justify-content: space-around;
     background: linear-gradient(230deg, #fff 3.94%, #e5e5e5 64.08%, #fbfbfb 88.62%);
+}
+
+.benefits__container::before {
+    content: "";
+    position: absolute;
+    left: -30px;
+    top: 50px;
+    z-index: -5;
+    width: 250px;
+    height: 250px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+    filter: blur(100px);
+}
+
+/*.benefits__container::after {*/
+/*    content: "we\Ahave";*/
+/*    white-space: pre-wrap;*/
+/*    */
+/*    position: absolute;*/
+/*    top: 0;*/
+/*    left: 0;*/
+/*    */
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+
+/*    width: 180px;*/
+/*    height: 180px;*/
+/*    z-index: 10;*/
+/*    */
+/*    font-weight: 500;*/
+/*    font-size: 32px;*/
+/*    text-transform: uppercase;*/
+/*    text-align: center;*/
+/*    color: #ffffff;*/
+
+/*    background-image: url("/images/icons/star.svg");*/
+/*    background-size: contain;*/
+/*    background-position: center;*/
+/*    background-repeat: no-repeat;*/
+/*}*/
+
+.benefits__badge {
+    white-space: pre-wrap;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 180px;
+    height: 180px;
+    z-index: 10;
+
+    font-weight: 500;
+    font-size: 32px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #ffffff;
+
+    background-image: url("/images/icons/star2.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 .benefits__item {
