--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ a:hover {
 }
 
 .container {
+    width: 100%;
     max-width: 1300px;
     margin: 0 auto;
     padding: 0 15px;
@@ -286,15 +287,15 @@ a:hover {
     white-space: pre-wrap;
 
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 15px;
+    left: 15px;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
-    width: 180px;
-    height: 180px;
+    width: 200px;
+    height: 200px;
     z-index: 10;
 
     font-weight: 500;
@@ -302,6 +303,7 @@ a:hover {
     text-transform: uppercase;
     text-align: center;
     color: #ffffff;
+    transform: translate(-50%, -50%);
 
     background-image: url("/images/icons/star2.svg");
     background-size: contain;
@@ -365,7 +367,57 @@ a:hover {
 }
 
 .benefits__desc {
-    line-height: 163%;
     color: rgba(18, 21, 23, 0.9);
+}
+
+.stats {
+    margin-top: 135px;
+}
+
+.stats .container {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.stats__img-wrapper {
+    position: relative;
+}
+
+.stats__img-wrapper::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #237249;
+    position: absolute;
+    top: 25px;
+    left: -35px;
+    clip-path: polygon(67% 0, 100% 25%, 100% 100%, 0 100%, 0 0);
+}
+
+
+.stats__img {
+    width: 465px;
+    clip-path: polygon(67% 0, 100% 25%, 100% 100%, 0 100%, 0 0);
+    box-shadow: -14px 26px 65px 0 rgba(0, 0, 0, 0.39);
+}
+
+.stats__text {
+    max-width: 460px;
+}
+
+.stats__title {
+    margin-bottom: 60px;
+}
+
+.stats__desc {
+    margin-bottom: 60px;
+    line-height: 163%;
+    letter-spacing: -0.02em;
+    color: #D9D9D9;
+}
+
+.stats__pic {
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 23%, 11% 0);
 }
 
