--- a/style.css
+++ b/style.css
@@ -98,12 +98,6 @@ a:hover {
     padding: 50px 0;
 }
 
-.header__logo {
-}
-
-.header__nav {
-}
-
 .header__link + .header__link {
     margin-left: 95px;
 }
@@ -115,9 +109,6 @@ a:hover {
 }
 
 /*---------MAINE--------*/
-
-.main {
-}
 
 .welcome {
     margin-top: 30px;
@@ -228,7 +219,7 @@ a:hover {
 }
 
 .benefits {
-    margin-top: 80px;
+    margin-top: 110px;
 }
 
 .benefits__container {
@@ -255,33 +246,6 @@ a:hover {
     filter: blur(100px);
 }
 
-/*.benefits__container::after {*/
-/*    content: "we\Ahave";*/
-/*    white-space: pre-wrap;*/
-/*    */
-/*    position: absolute;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    */
-/*    display: flex;*/
-/*    align-items: center;*/
-/*    justify-content: center;*/
-
-/*    width: 180px;*/
-/*    height: 180px;*/
-/*    z-index: 10;*/
-/*    */
-/*    font-weight: 500;*/
-/*    font-size: 32px;*/
-/*    text-transform: uppercase;*/
-/*    text-align: center;*/
-/*    color: #ffffff;*/
-
-/*    background-image: url("/images/icons/star.svg");*/
-/*    background-size: contain;*/
-/*    background-position: center;*/
-/*    background-repeat: no-repeat;*/
-/*}*/
 
 .benefits__badge {
     white-space: pre-wrap;
@@ -370,21 +334,24 @@ a:hover {
     color: rgba(18, 21, 23, 0.9);
 }
 
-.stats {
+.history {
     margin-top: 135px;
+    padding-bottom: 25px;
 }
 
-.stats .container {
+.history .container {
     display: flex;
     align-items: flex-end;
     justify-content: space-between;
 }
 
-.stats__img-wrapper {
+.history__img-wrapper {
     position: relative;
+    display: flex;
+    box-shadow: -14px 26px 65px 0 rgba(0, 0, 0, 0.39);
 }
 
-.stats__img-wrapper::before {
+.history__img-wrapper::before {
     content: "";
     width: 100%;
     height: 100%;
@@ -392,32 +359,108 @@ a:hover {
     position: absolute;
     top: 25px;
     left: -35px;
+    z-index: -10;
     clip-path: polygon(67% 0, 100% 25%, 100% 100%, 0 100%, 0 0);
 }
 
-
-.stats__img {
+.history__img {
     width: 465px;
+    filter: drop-shadow(26px 65px 0 rgba(0, 0, 0, 0.39));
     clip-path: polygon(67% 0, 100% 25%, 100% 100%, 0 100%, 0 0);
-    box-shadow: -14px 26px 65px 0 rgba(0, 0, 0, 0.39);
 }
 
-.stats__text {
+.history__text {
     max-width: 460px;
+    position: relative;
 }
 
-.stats__title {
+.history__text::before {
+    content: "";
+    width: 920px;
+    height: 670px;
+    position: absolute;
+    right: -145px;
+    bottom: -290px;
+    z-index: -10;
+    background-image: url("./images/icons/lines.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: rotate(37deg);
+}
+
+.history__title {
     margin-bottom: 60px;
+    position: relative;
 }
 
-.stats__desc {
+.history__title::before {
+    content: "";
+    position: absolute;
+    right: 60px;
+    top: 30px;
+    z-index: -5;
+    width: 140px;
+    height: 140px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+    filter: blur(90px);
+}
+
+.history__desc {
     margin-bottom: 60px;
     line-height: 163%;
     letter-spacing: -0.02em;
     color: #D9D9D9;
 }
 
-.stats__pic {
+.history__pic {
     clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 23%, 11% 0);
+}
+
+.products {
+    margin-top: 100px;
+}
+
+.products__text {
+    display: flex;
+}
+
+.products__title {
+    width: 400px;
+}
+
+.products__desc {
+    width: 450px;
+}
+
+.products__cards {
+}
+
+.card {
+}
+
+.card__img-wrapper {
+}
+
+.card__img {
+}
+
+.card__title {
+}
+
+.card__desc {
+}
+
+.card__row {
+}
+
+.card__price {
+}
+
+.card__size {
+}
+
+.card__btn {
 }
 
