--- a/style.css
+++ b/style.css
@@ -45,7 +45,13 @@ a {
     transition: opacity 0.3s;
 }
 
-a:hover {
+button {
+    transition: opacity 0.3s;
+    border: none;
+    cursor: pointer;
+}
+
+a:hover, button:hover {
     opacity: 0.8;
 }
 
@@ -424,10 +430,26 @@ a:hover {
 
 .products__text {
     display: flex;
+    align-items: center;
+    gap: 70px;
 }
 
 .products__title {
     width: 400px;
+    position: relative;
+}
+
+.products__title::before {
+    content: "";
+    position: absolute;
+    right: 60px;
+    top: 20px;
+    z-index: -5;
+    width: 140px;
+    height: 140px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+    filter: blur(90px);
 }
 
 .products__desc {
@@ -438,29 +460,80 @@ a:hover {
 }
 
 .card {
+    position: relative;
+    width: 270px;
+    padding: 50px 30px 30px;
+    text-align: center;
+    background-color: #121517;
+    border-radius: 30px;
+}
+
+.card::before {
+    content: "";
+    position: absolute;
+    inset: -2px;
+    background: rgba(218, 218, 218);
+    background: linear-gradient(110deg, rgba(218, 218, 218, 0.8) 0%, rgba(218, 218, 218, 0.07) 42%, rgba(218, 218, 218, 0.7) 100%);
+    z-index: -5;
+    border-radius: 30px;
 }
 
 .card__img-wrapper {
+    position: relative;
+    margin-bottom: 30px;
+}
+
+.card__img-wrapper::before {
+    content: "";
+    display: inline-block;
+    width: 190px;
+    height: 190px;
+    top: 100px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, #237249 0%, #35c66b 100%);
+    box-shadow: 0 4px 41px 0 rgba(0, 0, 0, 0.39);
 }
 
 .card__img {
+    position: absolute;
+    top: -30px;
+    left: 0;
+    width: 180px;
+    filter: drop-shadow(0 4px 46px rgba(0, 0, 0, 0.48));
 }
 
 .card__title {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 163%;
+    color: #fff;
+    margin-bottom: 10px;
 }
 
 .card__desc {
+    margin-bottom: 15px;
 }
 
 .card__row {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 25px;
 }
 
 .card__price {
+    font-weight: 500;
+    font-size: 32px;
+    color: #ffffff;
 }
 
 .card__size {
 }
 
 .card__btn {
+    width: 100%;
+    font-size: 17px;
+    padding: 15px 0;
+
 }
 
