--- a/style.css
+++ b/style.css
@@ -96,6 +96,40 @@ a:hover, button:hover {
     color: #D9D9D9;
 }
 
+.text-row {
+    display: flex;
+    align-items: center;
+    gap: 70px;
+    margin-bottom: 60px;
+}
+
+.text-row.text-row--reverse {
+    flex-direction: row-reverse;
+}
+
+.text-row__title {
+    width: 400px;
+    position: relative;
+}
+
+.text-row__title::before {
+    content: "";
+    position: absolute;
+    right: 60px;
+    top: 20px;
+    z-index: -5;
+    width: 140px;
+    height: 140px;
+    border-radius: 100%;
+    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
+    filter: blur(90px);
+}
+
+.text-row__desc {
+    width: 455px;
+}
+
+
 
 /*---------HEADER--------*/
 
@@ -428,35 +462,10 @@ a:hover, button:hover {
     margin-top: 100px;
 }
 
-.products__text {
-    display: flex;
-    align-items: center;
-    gap: 70px;
-}
-
-.products__title {
-    width: 400px;
-    position: relative;
-}
-
-.products__title::before {
-    content: "";
-    position: absolute;
-    right: 60px;
-    top: 20px;
-    z-index: -5;
-    width: 140px;
-    height: 140px;
-    border-radius: 100%;
-    background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
-    filter: blur(90px);
-}
-
-.products__desc {
-    width: 450px;
-}
-
 .products__cards {
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
 }
 
 .card {
@@ -476,6 +485,14 @@ a:hover, button:hover {
     background: linear-gradient(110deg, rgba(218, 218, 218, 0.8) 0%, rgba(218, 218, 218, 0.07) 42%, rgba(218, 218, 218, 0.7) 100%);
     z-index: -5;
     border-radius: 30px;
+}
+
+.card:hover::before {
+    background: linear-gradient(260deg, rgba(35,114,73,1) 0%, rgba(53,198,107,1) 100%);
+}
+
+.card:hover .card__img {
+    transform: translateY(-5px);
 }
 
 .card__img-wrapper {
@@ -500,6 +517,7 @@ a:hover, button:hover {
     left: 0;
     width: 180px;
     filter: drop-shadow(0 4px 46px rgba(0, 0, 0, 0.48));
+    transition: transform 0.5s;
 }
 
 .card__title {
@@ -535,5 +553,50 @@ a:hover, button:hover {
     font-size: 17px;
     padding: 15px 0;
 
+}
+
+.events {
+    margin-top: 100px;
+}
+
+.events__inner-wrapper {
+}
+
+.event {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.event__title {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 109%;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+.event__btn {
+    padding: 20px 50px;
+}
+
+.event--price {
+    background-image: url("/images/events/1.png");
+}
+
+.event--kitchen {
+    background-image: url("/images/events/2.png");
+}
+
+.event--free {
+    background-image: url("/images/events/3.png");
+}
+
+.event--social {
+    background-image: url("/images/events/4.png");
+}
+
+.event--choose {
+    background-image: url("/images/events/5.png");
 }
 
