--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ img {
     max-width: 100%;
 }
 
-h1, h2 {
+h1, h2, h3 {
     font-weight: 800;
     margin: 0;
 }
@@ -560,15 +560,54 @@ a:hover, button:hover {
 }
 
 .events__inner-wrapper {
+    display: grid;
+    gap: 25px;
+    grid-auto-rows: 260px;
+    grid-template-columns: 1fr 0.5fr 0.5fr 1fr;
+    grid-template-areas: "price price kitchen kitchen"
+                          "free social social choose";
+    position: relative;
+}
+
+.events__inner-wrapper::before {
+    content: "";
+    width: 860px;
+    height: 620px;
+    position: absolute;
+    top: -350px;
+    left: -400px;
+    z-index: -10;
+    background-image: url("/images/icons/lines.svg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    transform: rotate(80deg);
+}
+
+.events__inner-wrapper::after {
+    content: "";
+    position: absolute;
+    bottom: -50px;
+    right: 50%;
+    z-index: -5;
+    width: 320px;
+    height: 270px;
+    border-radius: 100%;
+    background-color: rgba(217, 217, 217, 0.2);
+    filter: blur(100px);
 }
 
 .event {
+    padding: 45px 30px 20px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    border-radius: 30px;
 }
 
 .event__title {
+    margin-bottom: 50px;
+    width: 294px;
     font-weight: 500;
     font-size: 32px;
     line-height: 109%;
@@ -578,25 +617,31 @@ a:hover, button:hover {
 
 .event__btn {
     padding: 20px 50px;
+    display: inline-block;
 }
 
 .event--price {
     background-image: url("/images/events/1.png");
+    grid-area: price;
 }
 
 .event--kitchen {
     background-image: url("/images/events/2.png");
+    grid-area: kitchen;
 }
 
 .event--free {
     background-image: url("/images/events/3.png");
+    grid-area: free;
 }
 
 .event--social {
     background-image: url("/images/events/4.png");
+    grid-area: social;
 }
 
 .event--choose {
     background-image: url("/images/events/5.png");
+    grid-area: choose;
 }
 
