--- a/style.css
+++ b/style.css
@@ -792,7 +792,6 @@ a:hover, button:hover {
     background-repeat: no-repeat;
 }
 
-
 .contacts__img {
     width: 350px;
     clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
@@ -801,10 +800,6 @@ a:hover, button:hover {
 .footer {
     padding: 40px 0;
     background-color: #0b0c0d;
-}
-
-.footer .container {
-
 }
 
 .footer__row {
@@ -852,16 +847,6 @@ a:hover, button:hover {
     /*border-radius: 30px;*/
 }
 
-.footer__up-link::before {
-    content: "";
-    position: absolute;
-    inset: -2px;
-    background: rgba(218, 218, 218);
-    background: linear-gradient(110deg, #237249 0%, #237249 42%, #237249 100%);
-    z-index: -5;
-    border-radius: 30px;
-}
-
 .footer__arrow {
     height: 35px;
 }
@@ -895,6 +880,43 @@ a:hover, button:hover {
 @media (max-width: 1000px) {
     .footer__nav {
         gap: 40px;
+    }
+
+    .welcome__img {
+        width: 280px;
+    }
+
+    .welcome .container {
+        flex-direction: column-reverse;
+        gap: 30px;
+    }
+
+    .welcome__img-wrapper::before {
+        width: 550px;
+        height: 550px;
+        position: absolute;
+        right: -150px;
+        bottom: -150px;
+    }
+
+    .history .container {
+        flex-direction: column;
+        align-items: center;
+        gap: 60px;
+    }
+
+    .history {
+        text-align: center;
+    }
+
+    .history__img {
+        width: 450px;
+        height: 400px;
+        object-fit: cover;
+    }
+
+    .history__text::before {
+        right: -255px;
     }
 }
 
