--- a/style.css
+++ b/style.css
@@ -230,11 +230,11 @@ a:hover, button:hover {
 
 .welcome__img-wrapper::before {
     content: "";
-    width: 860px;
-    height: 620px;
+    width: 800px;
+    height: 800px;
     position: absolute;
-    right: -230px;
-    bottom: -100px;
+    right: 100px;
+    bottom: -120px;
     z-index: -10;
     background-image: url("./images/icons/lines.svg");
     background-size: contain;
@@ -892,11 +892,11 @@ a:hover, button:hover {
     }
 
     .welcome__img-wrapper::before {
-        width: 550px;
-        height: 550px;
+        width: 500px;
+        height: 500px;
         position: absolute;
-        right: -150px;
-        bottom: -150px;
+        right: 200px;
+        bottom: 80px;
     }
 
     .history .container {
@@ -918,7 +918,99 @@ a:hover, button:hover {
     .history__text::before {
         right: -255px;
     }
+
+    .text-row {
+        flex-direction: column;
+        gap: 30px;
+        text-align: center;
+    }
+
+    .text-row.text-row--reverse {
+        flex-direction: column;
+    }
+
+    .text-row__title::before {
+        right: auto;
+        left: 10px;
+    }
+
+    .hide-text-mobile {
+        display: none;
+    }
+
+    .benefits__badge {
+        left: 50px;
+    }
 }
 
+@media (max-width: 850px) {
+    .contacts {
+        text-align: center;
+    }
 
+    .contacts .container {
+        flex-direction: column-reverse;
+        align-items: center;
+        gap: 50px;
+    }
+
+    .contacts__img {
+        width: 450px;
+        height: 340px;
+        object-fit: cover;
+    }
+
+    .contacts__img-inner-wrapper::after {
+        left: auto;
+        right: -220px;
+        top: 0;
+    }
+
+    .contacts__img-wrapper::after {
+        transform: rotate(33deg);
+        bottom: -240px;
+    }
+
+    .footer__row {
+        flex-wrap: wrap;
+        align-items: center;
+        row-gap: 40px;
+        margin-bottom: 40px;
+    }
+
+    .footer__nav {
+        width: 100%;
+        order: 1;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+
+    .footer__nav-col {
+        width: calc(50%-15px);
+
+    }
+
+    .events__inner-wrapper::before {
+        content: none;
+    }
+}
+
+@media (max-width: 720px) {
+    body {
+        font-size: 14px;
+    }
+
+    .header__logo {
+        font-size: 22px;
+    }
+
+    .header .container {
+        gap: 20px;
+        justify-content: space-between;
+    }
+
+    .header__link + .header__link {
+        margin-left: 30px;
+    }
+}
 
