--- a/style.css
+++ b/style.css
@@ -986,7 +986,7 @@ a:hover, button:hover {
     }
 
     .footer__nav-col {
-        width: calc(50%-15px);
+        width: calc(50% - 15px);
 
     }
 
