--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ a:hover, button:hover {
 }
 
 .text-row__title {
-    width: 400px;
+    max-width: 400px;
     position: relative;
 }
 
@@ -559,14 +559,10 @@ a:hover, button:hover {
     color: #ffffff;
 }
 
-.card__size {
-}
-
 .card__btn {
     width: 100%;
     font-size: 17px;
     padding: 15px 0;
-
 }
 
 .events {
@@ -668,7 +664,6 @@ a:hover, button:hover {
 .contacts .container {
     display: flex;
     justify-content: space-between;
-
 }
 
 .contacts__text {
@@ -809,9 +804,6 @@ a:hover, button:hover {
     margin-bottom: 85px;
 }
 
-.footer__logo {
-}
-
 .footer__nav {
     display: flex;
     gap: 80px;
@@ -842,9 +834,6 @@ a:hover, button:hover {
     border: 1.5px solid transparent;
     background: linear-gradient(#0b0c0d, #0b0c0d) padding-box,
     linear-gradient(-30deg, #237249, #35C66B) border-box;
-    /*border: 1px solid #35C66B;*/
-    /*border-bottom: 1px solid #237249;*/
-    /*border-radius: 30px;*/
 }
 
 .footer__arrow {
@@ -939,7 +928,7 @@ a:hover, button:hover {
     }
 
     .benefits__badge {
-        left: 50px;
+        /*left: 50px;*/
     }
 }
 
@@ -1028,8 +1017,8 @@ a:hover, button:hover {
     .welcome__img-wrapper::before {
         width: 420px;
         height: 420px;
-        right: -100px;
-        bottom: -100px;
+        right: 130px;
+        bottom: 200px;
     }
 
     .title {
@@ -1071,10 +1060,10 @@ a:hover, button:hover {
     }
 
     .welcome__img-wrapper::after {
-        right: 90px;
-        bottom: 80px;
-        width: 130px;
-        height: 130px;
+        right: 340px;
+        bottom: 340px;
+        width: 140px;
+        height: 140px;
         filter: blur(60px);
     }
 
@@ -1232,6 +1221,8 @@ a:hover, button:hover {
     }
 
     .event__title {
+        margin-left: auto;
+        margin-right: auto;
         font-size: 18px;
         max-width: 160px;
         margin-bottom: 25px;
@@ -1244,6 +1235,7 @@ a:hover, button:hover {
 
     .event {
         padding: 20px 5px;
+        text-align: center;
     }
 
     .events__inner-wrapper {
@@ -1260,5 +1252,113 @@ a:hover, button:hover {
     .event--choose {
         display: none;
     }
+
+    .text-row__desc {
+        width: auto;
+        max-width: 460px;
+    }
+
+    .contacts__img {
+        width: 340px;
+        height: 240px;
+    }
+
+    .contacts__img-inner-wrapper::before {
+        bottom: -15px;
+    }
+
+    .contacts__img-wrapper::after {
+        width: 630px;
+        height: 630px;
+        right: -135px;
+        bottom: -260px;
+    }
+
+    .contacts {
+        padding-top: 90px;
+        padding-bottom: 40px;
+    }
+
+    .contacts__img-inner-wrapper::after {
+        width: 200px;
+        height: 200px;
+        font-size: 28px;
+        right: -140px;
+    }
+
+    .contacts__title {
+        margin-bottom: 40px;
+    }
+
+    .contacts__desc {
+        margin-bottom: 40px;
+    }
+
+    .contacts__phone {
+        font-size: 20px;
+        justify-content: center;
+    }
+
+    .contacts__phone::before {
+        width: 30px;
+        height: 30px;
+    }
+
+    .contacts__text {
+        width: auto;
+        max-width: 390px;
+    }
+
+    .contacts__img-wrapper::before {
+        left: auto;
+        right: -50px;
+        top: 80px;
+        filter: blur(60px);
+    }
+
+    .contacts__desc::before {
+        content: none;
+    }
+
+    .footer {
+        padding: 20px 0;
+    }
+
+    .footer__logo {
+        font-size: 24px;
+    }
+
+    .footer__up-link {
+        width: 55px;
+        height: 55px;
+        border-radius: 18px;
+    }
+
+    .footer__arrow {
+        height: 27px;
+    }
+
+    .footer__phone {
+        font-size: 16px;
+    }
 }
 
+@media (max-width: 500px) {
+    .history__text::before {
+        width: 550px;
+        height: 550px;
+        right: -45px;
+        bottom: -240px;
+    }
+}
+
+@media (max-width: 400px) {
+    .header__link + .header__link {
+        margin-left: 15px;
+    }
+
+    .btn {
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
